# nand2tetris

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: build-and-test.yml  build.yml
projects/: CMakeLists.txt
projects/01/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux8Way16.hdl  Or.hdl  Or16.hdl  Xor.hdl
projects/02/: ALU.hdl  ALU.out  Add16.hdl  FullAdder.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/assembler/: CMakeLists.txt  instruction.cpp  instruction.h  main.cpp
projects/06/hack-assembler/: CMakeLists.txt
projects/06/hack-assembler/src/: main.cpp
projects/07/MemoryAccess/BasicTest/: BasicTest.asm
projects/07/MemoryAccess/PointerTest/: PointerTest.asm
projects/07/StackArithmetic/StackTest/: StackTest.asm
projects/07/vmtranslator/: CMakeLists.txt  addressing.cpp  addressing.h  addressing_test.cpp  commands.cpp  commands.h  commands_test.cpp  main.cpp  parser.cpp  parser.h
projects/08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
projects/08/FunctionCalls/NestedCall/: NestedCall.asm
projects/08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/08/FunctionCalls/StaticsTest/: StaticsTest.asm
projects/08/ProgramFlow/BasicLoop/: BasicLoop.asm
projects/08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
projects/08/vmtranslator/: CMakeLists.txt  addressing.cpp  addressing.h  addressing_test.cpp  commands.cpp  commands.h  commands_test.cpp  main.cpp  output.cpp  output.h  parser.cpp  parser.h
projects/10/jackanalyzer/: CMakeLists.txt  main.cpp  output.cpp  output.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
